--- a/MEDVBiServ/Layout/NavMenu.razor
+++ b/MEDVBiServ/Layout/NavMenu.razor
@@ -34,9 +34,21 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px3">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/notifications">
-               Benachrichtigung
+                Benachrichtigung
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/appointments">
+                Termine
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/settings">
+                Einstellungen
             </NavLink>
         </div>
 
